examples/should-fail/f46_impred_wrong_annotation_target.lean
def demo4_bad_wrong_annotation_target : Type :=
  ((A : Type) -> Prop : Prop)
